# communication_link

./: .gitignore  Dockerfile  Makefile  README.md  VehicleGlobalPosition.go  commands.go  communication_link.service.wrapper.sh  go.mod  go.sum  main.go  ros.go  roswrapper.go  telemetry.go
.github/workflows/: main.yaml
gstnode/: main.go
gstreamer/: gstreamer.c  gstreamer.go
init/: communication_link.service
missionengine/: missionengine.go
missionengine/gittransport/: gittransport.go  log_messages.go  log_messages_test.go  pull_messages.go  push_messages.go
missionengine/types/: messages.go
missionengine/worldengine/: preplanned.go  worldengine.go  worldstate.go
packaging/: package.sh
pkg/commands/: commands.go
pkg/gst/: gstwrapper.go
pkg/missionengine/: missionengine.go
pkg/ros/: roswrapper.go
pkg/telemetry/: telemetry.go
pkg/types/: Point.go  Pose.go  PoseStamped.go  Quaternion.go  String.go  Time.go
ros/: roswrapper.go
roswrapper/: CMakeLists.txt  package.xml
roswrapper/include/: generic_publisher.hpp  generic_subscription.hpp  qos.hpp  rosbag2_node.hpp  wrapper_init.h  wrapper_pub.h  wrapper_sub.h
roswrapper/src/: generic_publisher.cpp  generic_subscription.cpp  qos.cpp  rosbag2_node.cpp  typesupport_helpers.cpp  wrapper_init.cpp  wrapper_pub.cpp  wrapper_sub.cpp
types/: BatteryStatus.go  Header.go  MissionResult.go  Path.go  Point.go  Pose.go  PoseStamped.go  Quaternion.go  SensorCombined.go  String.go  Time.go  VehicleGlobalPosition.go  VehicleLocalPosition.go  VehicleStatus.go
videonode/: config.yml  main.go  videonode
(+11 files in other folders)
